--- a/style/index.css
+++ b/style/index.css
@@ -38,7 +38,7 @@ main {
   max-width: 100%;
   margin: 0 auto;
 	background: #FFFCAA;
-  padding: 40px 20px;
+  padding: 40px 20px 60px;
   box-sizing: border-box;
 }
 
@@ -85,14 +85,17 @@ section.start button.start-btn {
 section.question {
   display: none;
 }
-section.question h2{
+section.question h2,
+section.result h2{
   margin: 0 0 24px;
 }
-section.question h2 img{
+section.question h2 img,
+section.result h2 img{
   width: 45px;
 }
 
-section.question h2 a {
+section.question h2 a,
+section.result h2 a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,7 +104,8 @@ section.question h2 a {
   padding: 0;
   margin: 0;
 }
-section.question h2 p{
+section.question h2 p,
+section.result h2 p{
   font-size: 24px;
   font-weight: 900;
   color: var(--orange);
@@ -172,4 +176,108 @@ section.question article .btn-prev {
 }
 section.question article .btn-prev img{
   width: 35px;
+}
+
+/* --- result --- */
+section.result .content,
+section.coupon{
+  width: 100%;
+  border-radius: 16px;
+  border: 1px solid #cdcdcd;
+  padding: 30px;
+  box-sizing: border-box;
+  background: #fff;
+  text-align: center;
+}
+section.coupon {
+  margin-top: 20px;
+}
+section.result .content > p {
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  padding-bottom: 12px;
+  color: var(--gray);
+}
+
+section.result .content h3 {
+  width: fit-content;
+  font-size: 24px;
+  font-weight: 900;
+  text-align: center;
+  background:var(--orange);
+  color: #fff;
+  padding: 8px 20px;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+section.result .content .menu-img {
+  width: 200px;
+  max-width: 100%;
+}
+
+section.result .content > p.desc {
+  background: none;
+  color: var(--gray);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.2;
+  margin: 0;
+}
+
+section.coupon > p:nth-of-type(1) {
+  font-size: 16px;
+  font-weight: 700;
+  text-align: left;
+  
+}
+section.coupon > p:nth-of-type(2) {
+  font-size: 32px;
+  font-weight: 900;
+  text-align: left;
+  line-height: 1.1;
+  padding: 10px 0 18px;
+}
+section.coupon > p:nth-of-type(3) {
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  color: var(--gray);
+  line-height: 1.2;
+}
+section.coupon .code-box {
+  position: relative;
+  border: 1px solid #a7a7a7;
+  border-radius: 8px;
+  padding: 30px 0;
+  margin: 180px 0 25px;
+  font-size: 28px;
+  font-weight: 700;
+}
+section.coupon .code-box img{
+  position: absolute;
+  top: -129px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 280px;
+  max-width: 100%;
+}
+
+section.coupon .share-btns-box button{
+  width: 100%;
+  display: block;
+  border: none;
+  padding: 12px 0;
+  border-radius: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff;
+}
+section.coupon .share-btns-box button:nth-of-type(1) {
+  background: #e489f4;
+}
+section.coupon .share-btns-box button:nth-of-type(2) {
+  background: #54C384;
 }
