--- a/style/index.css
+++ b/style/index.css
@@ -86,16 +86,19 @@ section.question {
   display: none;
 }
 section.question h2,
-section.result h2{
+section.result h2,
+section.event h2{
   margin: 0 0 24px;
 }
 section.question h2 img,
-section.result h2 img{
+section.result h2 img,
+section.event h2 img{
   width: 45px;
 }
 
 section.question h2 a,
-section.result h2 a {
+section.result h2 a ,
+section.event h2 a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -105,7 +108,8 @@ section.result h2 a {
   margin: 0;
 }
 section.question h2 p,
-section.result h2 p{
+section.result h2 p,
+section.event h2 p{
   font-size: 24px;
   font-weight: 900;
   color: var(--orange);
@@ -280,4 +284,116 @@ section.coupon .share-btns-box button:nth-of-type(1) {
 }
 section.coupon .share-btns-box button:nth-of-type(2) {
   background: #54C384;
+}
+
+
+/* --- 쿠폰 --- */
+section.event .code-area {
+  width: 100%;
+  background: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+}
+section.event .code-area p{
+  font-size: 14px;
+  font-weight: 400;
+  color: #727272;
+  line-height: 1.2;
+}
+section.event .code-area p.small {
+  font-size: 14px;
+  font-weight: 700;
+  color: #000;
+}
+section.event .code-area p.big {
+  font-size: 32px;
+  font-weight: 900;
+  color: #000;
+  padding:10px 0 20px;
+  line-height: 1.1;
+}
+
+section.event .code-area .input-area {
+  display: flex;
+  gap: 20px;
+  margin: 60px 0;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+section.event .code-area .input-area input {
+  border-radius: 4px;
+  border: none;
+  outline: 1px solid #ccc;
+  background: #f7f7f7;
+  flex: 1;
+  flex-shrink: 1;
+  height: 45px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 20px;
+}
+section.event .code-area .input-area button {
+  display: block;
+  background: #54C384;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  padding: 14px 12px;
+  width: 100px;
+  cursor: pointer;
+}
+
+section.event .event-info strong{
+  padding: 6px 12px;
+  background: #F6D88E;
+  display: block;
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 12px;
+  width: fit-content;
+}
+section.event .event-info p {
+  padding-top: 10px;
+  line-height: 1.3;
+}
+section.event .event-info p:nth-of-type(4) {
+  color: #FF6767;
+}
+
+section.modal {
+  display: none;
+  background: rgba(0,0,0,0.75);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  
+} 
+section.modal > div {
+  background: #fff;
+  border-radius: 8px;
+  box-sizing: border-box;
+  padding: 20px;
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+section.modal > div img.qr {
+  width: 120px;
+}
+
+section.modal > div p.date {
+  font-size: 12px;
+  padding-top: 10px;
+  color: #FF6767;
+  font-weight: 500;
 }
